# pdf_updated

./: .env.example  .gitignore  README.md  app.py  llm_processor.py  main.py  pdf_extractor.py  pyproject.toml  routes.py
static/js/: main.js
templates/: index.html
